# 857_Final_Project_Code

./: .gitignore  README.md  requirements.txt  robot_face.py
data/: seic_public_directory_with_schedule.xlsx
filters/: scan_wedge_filter.json  scan_wedge_filter.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/milton_final_project/lib/milton_final_project/: face_display_node  wayfinding_input_node  yolo_node  yolo_web_stream
install/milton_final_project/share/milton_final_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/milton_final_project/share/milton_final_project/data/: seic_public_directory.xlsx
install/milton_final_project/share/milton_final_project/launch/: face_yolo_launch.py  yolo_launch.py
log/: latest_build
maps/: 412_test.pgm  412_test.yaml  412_test_labels.json  hallwaytest.pgm  hallwaytest.yaml  hallwaytest_labels.json  lab_map_new.pgm  lab_map_new.yaml  lab_map_new_labels.json  lab_map_v5.pgm  lab_map_v5.yaml  lab_map_v6.pgm  lab_map_v6.yaml  lab_map_v6_labels.json  last_navigation_label.json  last_navigation_path.json  map_labels.yaml  mapped_area_20260505_011541.pgm  mapped_area_20260505_011541.yaml  mapped_area_20260505_012437.pgm  mapped_area_20260505_012437.yaml  mapped_area_20260505_012547.pgm  mapped_area_20260505_012547.yaml  mapped_area_20260505_014519.labels.yaml  mapped_area_20260505_014519.pgm  mapped_area_20260505_014519.yaml  mapped_area_20260505_021307.labels.yaml  mapped_area_20260505_021307.pgm  mapped_area_20260505_021307.yaml  mapped_area_20260505_024309.labels.yaml  mapped_area_20260505_024309.pgm  mapped_area_20260505_024309.yaml  office_test2.yaml  office_test2_labels.json  office_test4.pgm  office_test4.yaml  office_test4_labels.json  office_test5.pgm  office_test5.yaml  office_test5_labels.json  (+3 more)
maps_old/: cartographer_map.pgm  cartographer_map.yaml  qbot_lidar_filter.json  slam_toolbox_map.labels.yaml  slam_toolbox_map.pgm  slam_toolbox_map.yaml
runtime_logs/: robot_interaction_log.old_format_1.csv
scripts/: check_faster_whisper_stt.py  run_check_faster_whisper_stt.sh  run_face_ui_audio.sh
src/milton_final_project/: package.xml  setup.cfg  setup.py
src/milton_final_project/behavior_trees/: navigate_to_pose_w_full_spin_recovery.xml
src/milton_final_project/config/: qbot_ekf.yaml  qbot_navigation_params.yaml  qbot_slam_toolbox.yaml
src/milton_final_project/launch/: face_ui_audio_launch.py  face_yolo_launch.py  gui_test_launch.py  qbot_navigation_launch.py  qbot_slam_toolbox_mapping_launch.py  qbot_slam_toolbox_overlay_launch.py  slam_keyboard_mapping_launch.py  yolo_launch.py
src/milton_final_project/legacy/: README.md  face_gui_phrases.txt  lidar_person_tracker_node.py  wayfinding_history_node.py
src/milton_final_project/milton_final_project/: cmd_vel_minimum_enforcer.py  face_display_node.py  filter_saved_map.py  initial_pose_publisher.py  lidar_person_tracker_node.py  lidar_self_filter_calibration.py  lidar_web_viewer.py  light_controller_node.py  live_map_web_viewer.py  main_controller_node.py  map_3d_viewer.py  navigate_to_label.py  navigate_to_origin.py  q_shutdown_node.py  qbot_joy_cmd_vel_node.py  qbot_odometry_node.py  return_to_start.py  robot_assistant.py  robot_interpreter.py  save_latest_map.py  save_robot_start_pose.py  scan_sanitizer_node.py  seic_directory.py  set_label_yaw.py  slam_keyboard_mapper_node.py  speech_node.py  status_qos.py  waiting_person_greeter_node.py  wayfinding_history_node.py  wayfinding_input_node.py  yolo_node.py  yolo_web_stream.py
src/milton_final_project/rviz/: qbot_navigation_debug.rviz  qbot_slam_toolbox.rviz
src/qbot_platform/: CMakeLists.txt  package.xml
src/qbot_platform/config/: qbot_platform_2d.lua  qbot_platform_slam_and_nav.yaml  trash_targets_v5.yaml
src/qbot_platform/launch/: qbot_full_system_test_launch.py  qbot_platform_black_roundtrip_v5_launch.py  qbot_platform_blue_roundtrip_v5_launch.py  qbot_platform_launch.py  qbot_platform_manual_map_launch.py  qbot_platform_map_nav_bringup_launch.py
src/qbot_platform/scripts/: breadcrumb_return.py  go_to_label.py  led_controller.py  publish_home_initial_pose.py  roundtrip_to_target_node.py  scan_wedge_filter.py  wheel_odometry.py
src/qbot_platform/src/: fixed_lidar_frame.cpp  lidar.cpp
tools/: commands.txt  map_label_gui.py  scan_wedge_gui.py  show_robot_log.py
